# sandcraft

./: .clang-format  CMakeLists.txt  LICENSE.txt
res/shaders/: chunk.frag  chunk.vert
src/: camera.cpp  camera.hpp  main.cpp
